Replaced with a more appropriate text

--- a/static/templates/dashboard.html
+++ b/static/templates/dashboard.html
@@ -8,8 +8,7 @@
 			<div class="card-content">
 				<span class="card-title blue-text">Skill Assessment</span>
 					<p>
-						I am a very simple card. I am good at containing small bits of information.
-						I am convenient because I require little markup to use effectively.
+						Description text for Skill Assessment.
 					</p>
 			</div>
 			<div class="card-action">
@@ -24,8 +23,7 @@
 			<div class="card-content">
 				<span class="card-title green-text">Assessment Report</span>
 					<p>
-						I am a very simple card. I am good at containing small bits of information.
-						I am convenient because I require little markup to use effectively.
+						Description text for Assessment Report.
 					</p>
 			</div>
 			<div class="card-action">
