--- a/static/css/etnatheme.scss
+++ b/static/css/etnatheme.scss
@@ -4,27 +4,56 @@
 @import "global";
 
 $sidebar: 200px;
+
+.navbar {
+	.profile {
+		a {
+			position: relative;
+			white-space: nowrap;
+		}
+		img {
+			width: 50px;
+			left: 10px; top: 0;
+			position: absolute;
+			display: none;
+		}
+		@media (min-width: 768px) {
+			margin-left: $sidebar - 5;
+			img { display: block }
+			a 	{ padding-left: 70px; }
+		}
+	}
+}
+
 #sidebar {
 	display: none;
 	@media (min-width: 768px) { display: block; }
 	position: fixed;
-	left: 0;
+	left: 0; top: 0;
 	height: 100%;
 	background: $grey-3;
-	top: 0;
 	width: $sidebar;
 	overflow: auto;
-	.profile-info {
+	z-index: 1031;
+
+	.brand {
+		// padding-left: 15px;
+		background: $grey-2;
+		height: 50px;
+		font-size: 3em;
+		color: $grey-3;
 		text-align: center;
-		padding: 20px;
-		img { width: 60%; }
-		p {
-			@extend .font-bold;
-			display: block;
-			margin-top: 10px;
-			color: $grey-2;
+		position: relative;
+		span {
+			position: relative; top: -5px;
+			.icon {
+				font-size: 0.8em;
+				position: relative;
+				top: 2px;
+			}
 		}
 	}
+
 	.links {
 		li.active a { color: #FFF; background: $brand-primary; }
 		a {
@@ -57,14 +86,16 @@ $sidebar: 200px;
 		padding: 10px;
 		font-size: 1.2em;
 		color: #FFF;
+		margin-top: 0;
 	}
 
 	.cards {
 		background: lighten($grey-1, 10%);
-		box-shadow: 0 3px 2px rgba(#000, 0.2);
+		box-shadow: 0 3px 1px rgba(#000, 0.2);
 		min-height: 270px;
 		position: relative;
 		padding-bottom: 10px;
+		margin-bottom: 20px;
 		text-align: center;
 
 		.cards-header { @include cards-header(lighten($grey-1, 10%)); }
@@ -107,4 +138,32 @@ $sidebar: 200px;
 		@media (min-width: 768px) { border-top: none; }
 		min-height: 300px;
 	}
+
+	.avatar-info {
+		padding-top: 50px;
+		text-align: center;
+		width: 70%;
+		margin: 0 auto;
+		margin-bottom: 20px;
+	}
+
+	.profile-action {
+		margin-bottom: 20px;
+	}
+
+// Status Icons
+	span[class*="status-"] {
+		display: inline-block;
+		background: #000;
+		color: #FFF;
+		font-size: 0.8em;
+		width: 60px;
+		text-align: center;
+		padding: 2px 5px;
+		text-transform: uppercase;
+	}
+	span.status-rejected { background: $brand-danger }
+	span.status-passed { background: $brand-success }
+	span.status-pending { background: $grey-2 }
+
 
