--- a/static/css/_global.scss
+++ b/static/css/_global.scss
@@ -45,6 +45,19 @@
 	font-style: normal;
 }
 
+@mixin multiline-ellipsis($font-size,$line-height, $lines-to-show) {
+	display: block;
+	display: -webkit-box;
+	max-width: 400px;
+	height: $font-size*$line-height*$lines-to-show;
+	margin: 0 auto;
+	line-height: $line-height;
+	-webkit-line-clamp: $lines-to-show;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 html, body { height: 100%; }
 body {
 	font-family: 'rudaregular';
